tests/neg/i16888.scala
// scalac: -explain

def test = summon[scala.quoted.Quotes] // error
